feature - Refactor Architecture to Modular and Scalable Service
